--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
   </head>
   <body>
     <header>
-      <div class="max-width-wrapper-top">
+      <div class="max-width-wrapper">
         <div class="intro-chunk">
           <h1 class="title">Huckleberry</h1>
 
-          <p class="p-header">
+          <p>
             An avant-garde agency focused on connecting
             <strong>passion</strong> with <strong>logistics</strong>.
           </p>
 
-          <p class="p-header">A better way to solve the problems of tomorrow.</p>
+          <p>A better way to solve the problems of tomorrow.</p>
         </div>
       </div>
     </header>
     <main>
-      <section class="max-width-wrapper-bottom">
+      <section class="max-width-wrapper">
         <div class="card">
           <h2 class="indented-heading">
             Wealth comes from operations
